--- a/api_service/Dockerfile
+++ b/api_service/Dockerfile
@@ -5,23 +5,18 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get upgrade -y && apt-get install -y
 
 # Set the working directory for the app
-WORKDIR /app
+WORKDIR /api_service
 
 # Update pip
 RUN pip install --upgrade pip
 
 # Copy app-specific requirements and install them
-COPY requirements.txt /app/
+COPY requirements.txt /api_service/
 RUN pip install --no-cache-dir -r requirements.txt
 
+
 # Copy the app code into the container
-COPY src/ /app/src/
+COPY src/ /api_service/src/
 
-# Create port environment variable
-ENV FLASK_RUN_PORT=5000
-
-# Expose the application port
-EXPOSE 5000
-
-# Command to run the app (e.g., a Flask app)
-CMD ["python", "src/wsgi.py"]
+# Copy the app code into the container
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
