--- a/api_service/Dockerfile
+++ b/api_service/Dockerfile
@@ -18,5 +18,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the app code into the container
 COPY src/ /api_service/src/
 
+# Expose port
+EXPOSE 8000
+
 # Copy the app code into the container
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api_service.src.main:app", "--host", "0.0.0.0", "--port", "8000"]
