--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
       - ../..:/workspaces:cached      
     command: sleep infinity
     ports:
-      - "5000:5000"
+      - "80:8000"
 
-  app:
+  api-service:
     build:
-      context: app
+      context: api_service
       dockerfile: Dockerfile
     volumes:
       - ../..:/workspaces:cached         # Mount source code for hot-reloading if desired
     network_mode: service:devcontainer   # Puts app and devcontainer in the same network so browsing http://127.0.0.1:8080 works
     environment:
-      - FLASK_ENV=production
+      - PORT=8000
