--- a/api_service/Dockerfile
+++ b/api_service/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.11-slim
 # Install updates
 RUN apt-get update && apt-get upgrade -y && apt-get install -y
 
+USER nonroot
+
 # Set the working directory for the app
 WORKDIR /api_service
 
@@ -17,9 +19,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the app code into the container
 COPY src/ /api_service/src/
-
-# Expose port
-EXPOSE 8000
 
 # Copy the app code into the container
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "3"]
