--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.token=${SONAR_TOKEN}
 sonar.python.version=3.12
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.exclusions=tests/**, .devcontainer/**
+sonar.verbose=true
