--- a/.releaserc.prerelease.yml
+++ b/.releaserc.prerelease.yml
@@ -7,7 +7,5 @@ plugins:
 branches:
   - "+([0-9])?(.{+([0-9]),x}).x"
   - main
-  - name: alpha/*
+  - name: alpha
     prerelease: '${name.replace(/^alpha\//g, "alpha-")}'
-  - name: beta/*
-    prerelease: '${name.replace(/^beta\//g, "beta-")}'
