core: creates pipeline for production image push

--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -5,11 +5,9 @@ on:
   push:
     branches:
       - dev
+      - core
       - 'feat/**'
       - '!feat/**-poc'
-  pull_request:
-    branches:
-      - dev
 
 jobs:
   build-test:
