--- a/.github/workflows/push-image-production.yml
+++ b/.github/workflows/push-image-production.yml
@@ -2,15 +2,17 @@ name: CI/CD Pipeline
 
 env:
     ARTIFACT_REGISTRY: ${{ secrets.GCP_REGION }}-docker.pkg.dev
-    REGISTRY_REPO_NAME: "rmr-alpha"
+    REGISTRY_REPO_NAME: "rmr-production"
     IMAGE_NAME: "api"
-
-    IMAGE_URI: "$ARTIFACT_REGISTRY/${{ secrets.GCP_PROJECT_ID }}/$REGISTRY_REPO_NAME/$IMAGE_NAME"
+    IMAGE_URL: "$ARTIFACT_REGISTRY/${{ secrets.GCP_PROJECT_ID }}/$REGISTRY_REPO_NAME/$IMAGE_NAME"
 
 on:
   push:
     branches:
-      - alpha
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-test:
@@ -155,12 +157,12 @@ jobs:
       #######################################################################
       - name: Build Docker Image
         run: |
-          image=${{ env.IMAGE_URI }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
+          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
           docker build -t $image ./api_service
       
       #######################################################################
       - name: Push to Artifact Registry
         run: |
-          image=${{ env.IMAGE_URI }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
+          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
           gcloud auth configure-docker ${{ env.ARTIFACT_REGISTRY }}
           docker push $image
