--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -1,18 +1,10 @@
-name: CI/CD Pipeline
-
-env:
-    ARTIFACT_REGISTRY: ${{ secrets.GCP_REGION }}-docker.pkg.dev
-    REGISTRY_REPO_NAME: "rmr-production"
-    IMAGE_NAME: "api"
-    IMAGE_URL: "$ARTIFACT_REGISTRY/${{ secrets.GCP_PROJECT_ID }}/$REGISTRY_REPO_NAME/$IMAGE_NAME"
+name: CI Pipeline and Semantic Release
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      - alpha
 
 jobs:
   build-test:
@@ -136,33 +128,3 @@ jobs:
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
           echo "New Realease Version: ${{ steps.semantic.outputs.new_release_version }}"
-
-  deploy:
-    name: Deployig To Environment
-    runs-on: ubuntu-latest
-    needs: 
-      - build-test
-      - semantic-release
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      #######################################################################
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2.1.7
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      #######################################################################
-      - name: Build Docker Image
-        run: |
-          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
-          docker build -t $image ./api_service
-      
-      #######################################################################
-      - name: Push to Artifact Registry
-        run: |
-          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
-          gcloud auth configure-docker ${{ env.ARTIFACT_REGISTRY }}
-          docker push $image
