--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r api_service/requirements.txt # api dependencies
+          pip install -r api/requirements.txt # api dependencies
           pip install -r .devcontainer/requirements.txt # Dev/testing dependencies
 
       #######################################################################
