--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   api-service:
     container_name: api-service
     build:
-      context: api_service
+      context: api
       dockerfile: Dockerfile
     network_mode: service:devcontainer   # Puts app and devcontainer in the same network so browsing http://127.0.0.1:8080 works
     environment:
