core: remove unnecessary commented lines [skip actions]

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,13 +2,11 @@
 FROM python:3.11-slim
 
 # Install updates
+# Create a group
+# Create a user (with error handling if already exists)
 RUN apt-get autoremove \
     && groupadd -f -r yifattih \
     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
-
-# Create a group and user (with error handling if already exists)
-# RUN groupadd -f -r yifattih \
-#     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
 
 # Set the working directory for the app
 WORKDIR /api
