feat: add endpoint to expose observability metrics
Overview:
- add python library to instrument fast api
- add prometheus dir with prometheus configuration and Dockerfile
- add docker-compose file to run prometheus, api, and Grafana locally to test the observability
- rename the devcontainer docker-compose file

Specifics:
add docker outside docker feature to devcontainer
core: change api dir name form api_service to api
- make the corresponsding changes to files and folders
core: add port exposure to api container
core: change docker compose file name and devcontainer name
core: change devcontainer docker-compose file name
feat: add prometheus instrumentation to the API
core: remove unnecessary commented lines
core: add fastapi prometheus library to requirements
feat: add prometheus to the stack
core: create docker-compose file that spins up observability stack

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   build-test:
     name: Test, and Report
     runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+
     steps:
       # Step 1: Check out the code from the repository
       - name: Check out repository
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r api_service/requirements.txt # api dependencies
+          pip install -r api/requirements.txt # api dependencies
           pip install pytest pytest-cov flake8 black coverage # dev/testing dependencies
 
       # Step 4: Run code formatting check with Black
