--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -10,7 +10,6 @@ jobs:
   build-test:
     name: Bld, Format, Lint, Test, Report
     runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
 
     steps:
       # Step 1: Check out the code from the repository
@@ -29,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r api_service/requirements.txt # api dependencies
+          pip install -r api/requirements.txt # api dependencies
           pip install -r .devcontainer/requirements.txt # Dev/testing dependencies
 
       #######################################################################
