--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,10 +1,29 @@
-numpy
-Flask
-fastapi
-uvicorn
-pydantic
-pytest
-pytest-cov
-flake8
-black
-coverage
+# Pin dependancies that might cause breakage
+Werkzeug==3.1.3
+
+# Data manipulation dependencies
+numpy==2.2.2
+
+# Build dependencies
+fastapi==0.115.7
+pydantic==2.10.6
+
+# Runtime dependencies
+uvicorn==0.34.0
+honcho==2.0.0
+
+# Testing dependencies
+pylint==2.14.0
+pytest==8.3.4
+pytest-cov==6.0.0
+pytest-pspec==0.0.4
+
+# Code quality
+flake8==7.1.1
+black==25.1.0
+
+# Code Coverage
+coverage==7.6.10
+
+# Prometheus metrics instrumentation dependencies
+prometheus-fastapi-instrumentator==7.0.2
