--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,23 @@
 [tool.black]
 line-length = 79
+
+[tool.flake8]
+max-line-length = 79
+ignore = [
+    "E203",
+    "E501",
+    "W503"
+    ]
+exclude = [
+    ".git",
+    "__pycache__",
+    ".pytest_cache",
+    ".devcontainer"
+    ]
+
+[tool.pytest.ini_options]
+addopts = [
+    "--pspec",
+    "--cov=src",
+    "--cov-report=term-missing"
+]
