Add gbr Target to Automate Git Branch Listing in Makefile (#56)
* fix: add time projection to results dict

* fix: add activity factor calculation

- create activity factor constants
- modify equation to return dict with rmr by activity factor
- update model
- update fastapi output schema

* refactor: use black to comply with flake8

* fix: add unit tests

* fix: remove not needed tests

* fix: rename files; remove image pushing

note: image pushing handled by deployment pipeline and iac

* fix: update documentation

- change README content
- update CONTRIBUTING
- update COMMIT_CONVENTION
- create CODE_OF_CONDUCT

* fix: change badges

* add docker outside docker feature to devcontainer [skip actions]

* core: change api dir name form api_service to api [skip actions]

- make the corresponsding changes to files and folders

* core: add port exposure to api container [skip actions]

* core: change docker compose file name and devcontainer name [skip actions]

* core: change devcontainer docker-compose file name [skip actions]

* feat: add prometheus instrumentation to the API [skip actions]

* core: remove unnecessary commented lines [skip actions]

* core: add fastapi prometheus library to requirements [skip actions]

* feat: add prometheus to the stack [skip actions]

* core: create docker-compose file that spins up observability stack [skip actions]

* feat: add endpoint to expose observability metrics

- add python library to instrument fast api
- add prometheus dir with prometheus configuration and Dockerfile
- add docker-compose file to run prometheus, api, and Grafana locally to test the observability
- rename the devcontainer docker-compose file

* add Makefile for automation

* updates app requirements

* updates development environment requirements

* remove docstring to comply with pytest format

* remove docstring

* remove docstring

* add pytest-spec plugin to display test execution ou

--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -1,24 +1,15 @@
-name: CI/CD Pipeline
-
-env:
-    ARTIFACT_REGISTRY: ${{ secrets.GCP_REGION }}-docker.pkg.dev
-    REGISTRY_REPO_NAME: "rmr-production"
-    IMAGE_NAME: "api"
-    IMAGE_URL: "$ARTIFACT_REGISTRY/${{ secrets.GCP_PROJECT_ID }}/$REGISTRY_REPO_NAME/$IMAGE_NAME"
+name: CI Pipeline and Semantic Release
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      - alpha
 
 jobs:
   build-test:
     name: Bld, Format, Lint, Test, Report
     runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
 
     steps:
       # Step 1: Check out the code from the repository
@@ -37,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r api_service/requirements.txt # api dependencies
+          pip install -r api/requirements.txt # api dependencies
           pip install -r .devcontainer/requirements.txt # Dev/testing dependencies
 
       #######################################################################
@@ -136,33 +127,3 @@ jobs:
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
           echo "New Realease Version: ${{ steps.semantic.outputs.new_release_version }}"
-
-  deploy:
-    name: Deployig To Environment
-    runs-on: ubuntu-latest
-    needs: 
-      - build-test
-      - semantic-release
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      #######################################################################
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2.1.7
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      #######################################################################
-      - name: Build Docker Image
-        run: |
-          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
-          docker build -t $image ./api_service
-      
-      #######################################################################
-      - name: Push to Artifact Registry
-        run: |
-          image=${{ env.IMAGE_URL }}:${{ needs.semantic-release.outputs.IMAGE_TAG }}
-          gcloud auth configure-docker ${{ env.ARTIFACT_REGISTRY }}
-          docker push $image
