--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,25 +2,24 @@
 FROM python:3.11-slim
 
 # Install updates
+# Create a group
+# Create a user (with error handling if already exists)
 RUN apt-get autoremove \
     && groupadd -f -r yifattih \
     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
 
-# Create a group and user (with error handling if already exists)
-# RUN groupadd -f -r yifattih \
-#     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
-
 # Set the working directory for the app
-WORKDIR /api_service
+WORKDIR /api
 
 # Set ownership permissions to working directory
-RUN chown -R yifattih:yifattih /api_service
+RUN chown -R yifattih:yifattih /api
 
 # Change user
 USER yifattih 
 
 # Copy app-specific requirements
-COPY requirements.txt /api_service/
+COPY requirements.txt /api/
+COPY Procfile /api/
 
 # Update pip and and install requirements
 RUN  pip install --user --upgrade pip \
@@ -29,8 +28,13 @@ RUN  pip install --user --upgrade pip \
 # Add the user's local bin directory to PATH
 ENV PATH="/home/yifattih/.local/bin:$PATH"
 
-# Copy the app code into the container
-COPY src/ /api_service/src/
+# Add variable for Procfile execution via honcho
+ENV ENV="prod"
 
 # Copy the app code into the container
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "3"]
+COPY src/ /api/src/
+
+EXPOSE 8000
+
+# Copy the app code into the container
+CMD ["honcho", "start"]
