Revert "Add gbr Target to Automate Git Branch Listing in Makefile (#56)"
This reverts commit 1dfc7206bbe82cca0d0570235e4052506e78d0e5.

--- a/api_service/Dockerfile
+++ b/api_service/Dockerfile
@@ -2,24 +2,25 @@
 FROM python:3.11-slim
 
 # Install updates
-# Create a group
-# Create a user (with error handling if already exists)
 RUN apt-get autoremove \
     && groupadd -f -r yifattih \
     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
 
+# Create a group and user (with error handling if already exists)
+# RUN groupadd -f -r yifattih \
+#     && useradd -r -g yifattih -m -d /home/yifattih -s /bin/bash yifattih
+
 # Set the working directory for the app
-WORKDIR /api
+WORKDIR /api_service
 
 # Set ownership permissions to working directory
-RUN chown -R yifattih:yifattih /api
+RUN chown -R yifattih:yifattih /api_service
 
 # Change user
 USER yifattih 
 
 # Copy app-specific requirements
-COPY requirements.txt /api/
-COPY Procfile /api/
+COPY requirements.txt /api_service/
 
 # Update pip and and install requirements
 RUN  pip install --user --upgrade pip \
@@ -28,13 +29,8 @@ RUN  pip install --user --upgrade pip \
 # Add the user's local bin directory to PATH
 ENV PATH="/home/yifattih/.local/bin:$PATH"
 
-# Add variable for Procfile execution via honcho
-ENV ENV="prod"
+# Copy the app code into the container
+COPY src/ /api_service/src/
 
 # Copy the app code into the container
-COPY src/ /api/src/
-
-EXPOSE 8000
-
-# Copy the app code into the container
-CMD ["honcho", "start"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "3"]
