--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "RMR Projection API devcontainer",
+	"name": "BMR Calculator devcontainer",
 	// Or use a Dockerfile or Docker Compose file. Info: https://containers.dev/guide/dockerfile
 	// "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-	"dockerComposeFile": "../docker-compose-devcontainer.yml",
+	"dockerComposeFile": "../docker-compose.yml",
 	"service": "devcontainer",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -23,10 +23,7 @@
 		}
 	},
 	
-	"postStartCommand": "bash /workspaces/rmr-projection-api-model/.devcontainer/ownerships.sh",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
-	}
+	"postStartCommand": "bash /workspaces/rmr-projection-api-model/.devcontainer/ownerships.sh"
 
 
 	// Configure tool-specific properties.
